# ledger

./: Cargo.toml  README.md
cloud/: DEPLOYMENT.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
cloud/convex/: auth.config.ts  billing.test.ts  clients.test.ts  clients.ts  convex.config.ts  customerSync.test.ts  customerSync.ts  http.ts  invoices.ts  projects.ts  revenue.ts  schema.ts  settings.ts  tickets.test.ts  tickets.ts
cloud/convex/_generated/: api.d.ts
cloud/convex/lib/: auth.ts  invoices.ts
cloud/web/: .cta.json  .env.example  .env.production  .env.production.example  README.md  package.json  wrangler.jsonc
cloud/web/src/: env.ts  routeTree.gen.ts  router.tsx  start.ts
cloud/web/src/components/: app-shell.tsx  generate-invoice-dialog.tsx  mobile-card.tsx  (+8 more)
docs/: foldTime.md  ledger.md
docs/stages/: 01-scaffold.md  03-paths.md  06-config.md  07-project.md  09-commands.md  10-integration-test.md  11-polish.md  12-cloud-sync.md  13-nvim-plugin.md  README.md
lua/foldtime/: cli.lua  heartbeat.lua  init.lua
lua/ledger/: cli.lua  health.lua  heartbeat.lua  init.lua  lualine.lua  status.lua
plugin/: foldtime.lua  ledger.lua
src/: config.rs  dates.rs  db.rs  errors.rs  lib.rs  main.rs  paths.rs  settings.rs
src/cloud/: auth.rs  convex.rs  mod.rs
src/commands/: heartbeat.rs  hook_commit.rs  init.rs  login.rs  logout.rs  report.rs  schema.rs  status.rs  sync.rs
tests/: integration_init_hook.rs  integration_status.rs  integration_sync.rs
tests/common/: mod.rs
tests/nvim/: foldtime_spec.lua  ledger_spec.lua  minimal_init.lua  run.sh
(+17 files in other folders)
