[package]
name = "ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ureq = { version = "3", features = ["json"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
httpmock = "0.7"
tempfile = "3.27.0"
